added some new links

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,31 +23,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                  <!----  <li class="nav-item">
-                        <a class="nav-link" href="#">
+                   <li class="nav-item">
+                        <a class="nav-link" href="/chatbot">
                         
-                            Chatbot
+                            Legal Assistance
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/image_gen">
                             
                             Image Generation
                         </a>
                     </li>
 					<li class="nav-item">
                        
-                            <a class="nav-link" href="#" >
+                            <a class="nav-link" href="/audio_trans" >
                             Audio Transcrip
                         </a>
                     </li>
                     <li class="nav-item">
                        
-                            <a class="nav-link" href="#" >
+                            <a class="nav-link" href="/ai_caption_voice" >
                             AI Voice over Bytes
                         </a>
-                    </li>-->
-                    <li class="nav-item dropdown">
+                    </li>
+                    <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle profile-dropdown-toggle" href="#" id="navbarDropdownProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ username }}
                         </a>
@@ -88,13 +88,14 @@
                         <div class="testimonial-slide swiper-slide">
                             
                             <video width="35%" controls autoplay loop>
-                                <source src="../static/BGvideo/ai_caption.mp4" type="video/mp4">
+                                <source src="../static/BGvideo/ai_caption1.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                             <div class="testimonial-slide-headings">
                                 <h2>AI Voice Over </h2>
                                 <p class="lead-card-btn">
-                                    <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
+                                    <a href="/ai_voice_info" class="btn btn-lg btn-secondary" id="card-1-btn-4" >Learn More</a>
+                                    
                                 </p>
                             </div>
                           
@@ -104,7 +105,8 @@
                             <div class="testimonial-slide-headings"> 
                             <h2>Legal Assistance</h2>
                             <p class="lead-card-btn">
-                                <a href="/chatbot" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Chat Bot</a>
+                                <a href="/chat_assistance_info" class="btn btn-lg btn-secondary" id="card-1-btn-1" >Learn More</a>
+                                 
                             </p>
                         </div>  
                          </div>
@@ -113,7 +115,8 @@
                                  <div class="testimonial-slide-headings">
                                     <h2>Image Generation</h2>
                                     <p class="lead-card-btn">
-                                        <a href="image_gen" class="btn btn-lg btn-secondary" id="card-1-btn-2" >Image Gen</a>
+                                        <a href="/image_gen_info" class="btn btn-lg btn-secondary" id="card-1-btn-2" >Learn More</a>
+                                         
                                     </p>
                                  </div>
                             
@@ -123,7 +126,8 @@
                            <div class="testimonial-slide-headings">
                             <h2>Audio Transcript</h2>
                             <p class="lead-card-btn">
-                                <a href="#" class="btn btn-lg btn-secondary" id="card-1-btn-3" >Learn More</a>
+                                <a href="/audio_transcript_info" class="btn btn-lg btn-secondary" id="card-1-btn-3" >Learn More</a>
+                                 
                             </p>
                            </div>
                             
