made some name changes

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -27,7 +27,7 @@
                     
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link active" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
@@ -39,9 +39,7 @@
             <main role="main" class="inner cover">
                 <h1 class="cover-heading">Welcome to GenAI</h1>
                 <p class="lead">Your gateway to the future of generative artificial intelligence, where creativity meets technology. Explore the boundless possibilities of AI in generating content, art, and solutions.</p>
-                <p class="lead">
-                    <a href="#" class="btn btn-lg btn-secondary">Learn More</a>
-                </p>
+                
             </main>
         </div>
     </div>
@@ -171,9 +169,9 @@
                 <i class="fa-solid fa-circle-xmark "></i>
                 <p class="lead-card-btn-popup">
                    <div class="lead-card-btn-h1">
-                        <h1>Oops!! please SignIN</h1>
+                        <h1>please Login</h1>
                    </div>
-                    <a href="{{ url_for('login') }}" class="btn btn-lg btn-secondary">SignIN</a>
+                    <a href="{{ url_for('login') }}" class="btn btn-lg btn-secondary">Login</a>
                 </p>
             </div>
         </div>
