--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                   <li class="nav-item">
+                   <!--<li class="nav-item">
                         <a class="nav-link" href="/chatbot">
                         
                             Legal Assistance
@@ -46,16 +46,17 @@
                             <a class="nav-link" href="/ai_caption_voice" >
                             AI Voice over Bytes
                         </a>
-                    </li>
+                    </li>-->
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle profile-dropdown-toggle" href="#" id="navbarDropdownProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ username }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                             <a class="dropdown-item" href="/profile_view">Profile</a>
-                            <a class="dropdown-item" href="/logout">
-                                 Logout
-                            </a>
+                            <a class="dropdown-item" href="/history">History</a>
+                            <a class="dropdown-item" href="/logout">Logout</a>
+                            
+                                 
                         </div>
                     </li>
                 </ul>
@@ -87,8 +88,8 @@
                     <div class="testimonial-content swiper-wrapper">
                         <div class="testimonial-slide swiper-slide">
                             
-                            <video width="35%" controls autoplay loop>
-                                <source src="../static/BGvideo/ai_caption1.mp4" type="video/mp4">
+                            <video width="35%" controls  loop>
+                                <source src="../static/BGvideo/ai_caption.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                             <div class="testimonial-slide-headings">
