--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -169,7 +169,7 @@
                 <i class="fa-solid fa-circle-xmark "></i>
                 <p class="lead-card-btn-popup">
                    <div class="lead-card-btn-h1">
-                        <h1>please Login</h1>
+                        <h1>Please Login</h1>
                    </div>
                     <a href="{{ url_for('login') }}" class="btn btn-lg btn-secondary">Login</a>
                 </p>
